--- a/index.html
+++ b/index.html
@@ -13,7 +13,121 @@
   <![endif]-->
 </head>
 
-<body>
-  <h1>My Resume</h1>
+<body class="body-format">
+
+  <h1>Quyen Moscoso - Web Developer</h1>
+
+  <section class = "intro-about">
+
+      <h2 class = "intro-title"> 
+        About me
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
+  </section>
+
+    <section class = "work-experience-list">
+
+      <h2 class = "intro-title">
+        Work History
+      </h2>
+
+      <p>
+        <h3 class="list-title"> 
+          Web Developer
+        </h3>
+
+        Lambda School <br>
+
+        Jan 2019 - Current
+
+      </p>
+
+      <p>
+        <h3 class="list-title">
+          Pacific Western
+        </h3>
+        Accounting Supervisor <br>
+
+        Sep 2018 - Current
+      </p>
+
+        <p>
+        <h3 class="list-title">
+         Office Manager
+        </h3>
+
+        DTU Tax and Bookkeeping <br>
+
+        Jan 2016 - Sep 2018
+       </p>
+        </section>
+
+    <section class="education-list">
+
+      <h2 class = "intro-title">
+        Education
+      </h2>
+      <p>
+      <h3 class="list-title">
+        Lambda School
+      </h3>
+
+      Full Stack Web Development <br>
+      2020-2022
+      </p>
+
+      <p>
+      <h3 class="list-title">
+        University of Economics
+      </h3>
+
+      Bachelor's degree, Finance <br>
+      2007-2011
+      </p>
+    </section>
+
+    <section class="education-list">
+      
+      <h2 class = "intro-title">
+        Portfolio
+      </h2>
+      
+      <a href="https://ms177.github.io/portfolio/user%20interface%202/User-Interface/great-idea-website/index.html"> 
+        USER INTERFACE II
+      </a>
+
+      <a href="https://ms177.github.io/portfolio/user%20interface%203/UI-III-Flexbox/great-idea/services.html"> 
+        USER INTERFACE III
+      </a>
+
+      <a href="https://ms177.github.io/portfolio/responsive-web-design-I/responsive-web-design-I-quyen-moscoso/index.html"> 
+        RESPONSIVE WEB DESIGN
+      </a>
+
+    </section>
+
+    <section>
+      <contact>
+        <h2 class = "intro-title">
+          Contact
+        </h2>
+        <p >
+          quyenmoscoso@gmail.com
+        </p>
+        <p>
+          1 (888) 888-8888
+        </p>
+        <p>
+        <a href="https://github.com/ms177">
+          Github
+        </a>
+      </p>
+      </contact>
 </body>
 </html>
